Elementor: Set color of section directly to avoid dark mode issues

--- a/compat/elementor/styles.less
+++ b/compat/elementor/styles.less
@@ -1,5 +1,4 @@
 .elementor-panel #elementor-panel-page-editor .elementor-control-content .siteorigin-widget-form {
-	color: #000;
 	min-width: inherit;
 
 	.wp-picker-container {
@@ -126,7 +125,16 @@
 				max-width: 220px;
 			}
 		}
+
+		.siteorigin-widget-description {
+			color: inherit;
+		}
 	}
+
+	.siteorigin-widget-field-type-section {
+		color: #000;
+	}
+
 	/* Button styles copied from wp-core for default UI look. */
 	.button, .button-secondary {
 		display: inline-block;
